Use GITHUB as a fallback